--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@remix-run/node": "^2.9.1",
     "@remix-run/react": "^2.9.1",
     "@remix-run/serve": "^2.9.1",
@@ -19,7 +20,9 @@
     "isbot": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.3.0"
+    "react-hook-form": "^7.52.1",
+    "tailwind-merge": "^2.3.0",
+    "valibot": "^0.36.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.9.1",
