--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
     "tailwind-merge": "^2.3.0",
-    "valibot": "^0.36.0"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.9.1",
